# rolecore

./: .gitignore  CHANGELOG.md  README.md  cli.py  pyproject.toml
docs/: architecture.md  cli.md  concepts.md  extending.md  reviewer.md
examples/: load_and_find.py  validate_yaml.py
registry/: registry.json
rolecore/: __init__.py
rolecore/core/: assembler.py  fusion_search.py  reviewer.py  role_manager.py  search_engine.py
rolecore/exporters/: json_exporter.py  markdown_exporter.py  prompt_exporter.py
rolecore/models/: assembly_context.py  registry_entry.py  role.py
rolecore/storage/: registry_store.py  role_store.py
rolecore/utils/: path_utils.py  schema_validator.py  version_utils.py
roles/academic/anthropologist/: v1.yaml  v2.yaml
roles/academic/historian/: v1.yaml  v2.yaml
roles/biz_product/wordpress_master/: v1.yaml
roles/core_dev/mobile_developer/: v1.yaml
roles/data_ml/numpy/: v1.yaml
roles/data_ml/pytorch/: v1.yaml
roles/data_ml/scikit_learn/: v1.yaml
roles/database/flyway/: v1.yaml
roles/database/opensearch/: v1.yaml
roles/database/sequelize/: v1.yaml
roles/database/sqlite/: v1.yaml
roles/database/typeorm/: v1.yaml
roles/dev_exp/c4_container/: v1.yaml
roles/ecommerce/customer_service_ai/: v1.yaml
roles/engineering/backend_architect/: v1.yaml  v2.yaml
roles/engineering/embedded_firmware_engineer/: v1.yaml  v2.yaml
roles/engineering/filament_optimization_specialist/: v1.yaml  v2.yaml
schema/: role_schema.yaml
tests/: conftest.py  test_checksum_refresh.py  test_fusion_search.py  test_official_gate.py  test_reviewer.py  test_schema_validator.py
(+134 files in other folders)
