[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rolecore"
version = "0.1.0"
description = "Role asset management — YAML-based role definitions with a five-level governance pipeline, 10-item official gate, and three-axis fusion search."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Evan Yuan"},
]
keywords = ["ai-agents", "role-management", "yaml", "prompt-engineering", "agent-infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
review = [
    "anthropic>=0.25",
]

[project.urls]
Homepage = "https://github.com/Evanyuan-builder/rolecore"
Repository = "https://github.com/Evanyuan-builder/rolecore"
Issues = "https://github.com/Evanyuan-builder/rolecore/issues"

[project.scripts]
rolecore = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["rolecore*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
